# unified-data-governance

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEBASE_REVIEW.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  justfile  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
airflow/: README.md
airflow/dags/: soda_pipeline_run.py  soda_pipeline_run_strict_mart.py  soda_pipeline_run_strict_raw.py
airflow/docker/: docker-compose.yml  requirements.txt
collibra/: README.md  airflow_helper.py  config.yml  metadata_sync.py  soda_quality_check.py
dbt/: README.md  dbt_project.yml  profiles.yml
dbt/models/raw/: sources.yml
docs/: DOCUMENTATION_AUDIT.md  architecture.rst  conf.py  examples.rst  index.rst
docs/_static/: .gitkeep
docs/adr/: 01-record-architecture-decisions.md  README.md  template.md
docs/api/: core.rst  index.rst  repositories.rst  services.rst  utils.rst
docs/internal/: CODEBASE_REVIEW.md  DOCUMENTATION_AUDIT.md  README.md
examples/: basic_usage.py
gx/: .gitignore  README.md  RUNNING_TESTS.md  UV_SETUP.md  pyproject.toml
gx/great_expectations/: great_expectations.yml
gx/great_expectations/checkpoints/mart/: fact_orders.yml
gx/great_expectations/checkpoints/raw/: customers.yml
gx/great_expectations/checkpoints/staging/: stg_customers.yml
gx/great_expectations/datasources/: mart_datasource.yml  quality_datasource.yml  raw_datasource.yml  staging_datasource.yml
gx/great_expectations/expectations/mart/: fact_orders.json
gx/great_expectations/expectations/raw/: customers.json
gx/great_expectations/expectations/staging/: stg_customers.json
gx/scripts/: create_example_expectations.py  run_gx_check.py  run_gx_check_simple.py  run_gx_layer.py  run_gx_test.py  setup_datasources.py  setup_environment.sh  setup_gx_project.py  test_gx_setup.py
scripts/: README.md  health_check.py  test_stack.py
scripts/setup/: reset_snowflake.py  setup_snowflake.py
soda/: README.md  generate_config.py  helpers.py  update_data_source_names.py
soda/checks/mart/: dim_customers.yml  dim_products.yml  fact_orders.yml
soda/checks/quality/: check_results.yml
soda/checks/raw/: customers.yml  order_items.yml  orders.yml  products.yml
soda/checks/staging/: stg_customers.yml  stg_order_items.yml  stg_orders.yml  stg_products.yml
soda/configuration/: configuration_mart.yml  configuration_quality.yml  configuration_raw.yml  configuration_staging.yml
soda/soda-collibra-integration-configuration/: Dockerfile  __init__.py  config.py  config.yaml  config_example.yaml  constants.py  documentation.md  integration.py  lambda-setup.md  lambda_handler.py  legacy_tests.py  main.py  metrics.py  readme.md  requirements.txt  utils.py
soda/soda-collibra-integration-configuration/clients/: __init__.py  collibra_client.py  soda_client.py
soda/soda-collibra-integration-configuration/k8s/: README.md  configmap.yaml  cronjob.yaml  debug.yaml
soda/soda-collibra-integration-configuration/models/: __init__.py  base.py  collibra.py  soda.py
soda/soda-collibra-integration-configuration/testing/: LOCAL_TESTING_GUIDE.md  README.md  test_docker_local.sh  test_k8s_local.py  validate_k8s.py
soda/soda-collibra-integration-configuration/tests/: test_integration.py
src/: __init__.py
src/core/: __init__.py  config.py  constants.py  exceptions.py  health.py  logging.py  retry.py
src/factories/: __init__.py  client_factory.py  service_factory.py
src/repositories/: __init__.py  base.py  collibra_repository.py  soda_repository.py
src/services/: __init__.py  metadata_service.py  pipeline_service.py  quality_service.py
src/utils/: __init__.py  cache.py  connection_pool.py  error_handlers.py  file_utils.py
superset/: README.md
superset/data/: checks_latest.csv  datasets_latest.csv  upload_soda_data_docker.py
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline_integration.py  test_service_integration.py
tests/unit/test_core/: test_config.py
tests/unit/test_repositories/: __init__.py  test_collibra_repository.py  test_soda_repository.py
tests/unit/test_services/: __init__.py  test_metadata_service.py  test_pipeline_service.py  test_quality_service.py
