[project]
name = "unified-data-governance"
version = "0.1.0"
description = "Data Engineering, Governance, and Quality Integration Platform"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # Core dependencies
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    
    # Data processing
    "pandas>=2.2.2,<2.4",
    "pyarrow>=15.0.0,<22.0",
    
    # dbt and adapter
    "dbt-core==1.10.11",
    "dbt-snowflake==1.10.2",
    
    # Critical dependency pins to avoid conflicts
    "protobuf>=6.30.0,<6.31.0",
    "pydantic>=2.5.2,<3.0.0",
    "google-api-core>=2.23.0",
    "googleapis-common-protos>=1.66.0",
    "proto-plus>=1.26.0",
    
    # Snowflake
    "snowflake-connector-python>=3.17.0",
    
    # Soda (installed from private PyPI)
    # Note: soda-snowflake must be installed separately:
    # uv pip install -i https://pypi.cloud.soda.io soda-snowflake==1.12.24
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ipython>=9.0.0",
    "jupyter>=1.0.0",
]

airflow = [
    # Airflow dependencies are managed in airflow/docker/requirements.txt
    # for Docker builds. Install separately if needed locally.
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ipython>=9.0.0",
    "jupyter>=1.0.0",
]

[tool.uv.sources]
# Soda packages from private PyPI
# Note: These must be installed manually with:
# uv pip install -i https://pypi.cloud.soda.io soda-snowflake==1.12.24
